// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutcomeButtonUI DOM rendering renders correctly when neither selected nor suspended 1`] = `
<button
  className="l-flex-1 kw-link KambiWidget-outcome general"
  disabled={false}
  onClick={undefined}
  role="button"
  type="button"
>
  <div
    className="KambiWidget-outcome__odds-wrapper"
  >
    <span
      className="KambiWidget-outcome__odds"
    >
      2.0
    </span>
  </div>
</button>
`;

exports[`OutcomeButtonUI DOM rendering renders correctly when selected 1`] = `
<button
  className="l-flex-1 kw-link KambiWidget-outcome general KambiWidget-outcome--selected"
  disabled={false}
  onClick={undefined}
  role="button"
  type="button"
>
  <div
    className="KambiWidget-outcome__odds-wrapper"
  >
    <span
      className="KambiWidget-outcome__odds"
    >
      2.0
    </span>
  </div>
</button>
`;

exports[`OutcomeButtonUI DOM rendering renders correctly when selected 2`] = `
<button
  className="l-flex-1 kw-link KambiWidget-outcome general KambiWidget-outcome--suspended"
  disabled={true}
  onClick={undefined}
  role="button"
  type="button"
>
  <div
    className="KambiWidget-outcome__odds-wrapper"
  >
    <span
      className="KambiWidget-outcome__odds"
    >
      2.0
    </span>
  </div>
</button>
`;

exports[`OutcomeButtonUI DOM rendering renders correctly with label 1`] = `
<button
  className="l-flex-1 kw-link KambiWidget-outcome general"
  disabled={false}
  onClick={undefined}
  role="button"
  type="button"
>
  <div
    className="KambiWidget-outcome__label-wrapper label"
  >
    <span
      className="KambiWidget-outcome__label"
    >
      Test label
    </span>
  </div>
</button>
`;

exports[`OutcomeButtonUI DOM rendering renders correctly with odds and label 1`] = `
<button
  className="l-flex-1 kw-link KambiWidget-outcome general"
  disabled={false}
  onClick={undefined}
  role="button"
  type="button"
>
  <div
    className="KambiWidget-outcome__flexwrap"
  >
    <div
      className="KambiWidget-outcome__label-wrapper"
    >
      <span
        className="KambiWidget-outcome__label"
      >
        Test label
      </span>
      <span
        className="KambiWidget-outcome__line"
      />
    </div>
    <div
      className="KambiWidget-outcome__odds-wrapper"
    >
      <span
        className="KambiWidget-outcome__odds"
      >
        5.0
      </span>
    </div>
  </div>
</button>
`;

exports[`OutcomeButtonUI DOM rendering throws error when both odds and label are not provided 1`] = `"Both odds and label cannot be set to null"`;
